Put cleaning filepath in variable

--- a/2023/clean.ipynb
+++ b/2023/clean.ipynb
@@ -163,6 +163,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "CSV_FILE_NAME = \"2023_results.csv\"\n",
+    "\n",
+    "# Keep everything before .csv\n",
+    "STRIPPED_CSV_FILE_NAME = CSV_FILE_NAME.split(\".\")[0]\n",
+    "\n",
+    "FILE_PATH = os.path.join(os.getcwd(), CSV_FILE_NAME)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -171,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +405,7 @@
        "4                        NaN                 NaN    WA  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +415,7 @@
     "\n",
     "# Import 2021 Enchantments Lottery Data\n",
     "raw_df = pd.read_csv(\n",
-    "    \"./2023_results.csv\",\n",
+    "    FILE_PATH,\n",
     "    header=0,\n",
     "    parse_dates=[\n",
     "        \"Preferred Entry Date 1\",\n",
@@ -424,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +468,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +507,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +559,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +619,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +671,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +724,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +764,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1588,7 +1604,7 @@
        "19                        N/A                   0    IL  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1600,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1638,7 +1654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -2221,7 +2237,7 @@
        "19                   0    IL  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2242,7 +2258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -2258,7 +2274,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2275,7 +2291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -2858,7 +2874,7 @@
        "19                   0    IL  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2870,7 +2886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -3453,7 +3469,7 @@
        "19                   0    IL  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3470,17 +3486,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
+    "CLEANED_FILE_PATH = os.path.join(os.getcwd(), f\"{STRIPPED_CSV_FILE_NAME}_cleaned.csv\")\n",
+    "\n",
     "# Export cleaned data to csv\n",
-    "raw_df.to_csv(\"./2023_results_cleaned.csv\", index=False, date_format=\"%m-%d-%Y\")"
+    "raw_df.to_csv(os.path.join(CLEANED_FILE_PATH), index=False, date_format=\"%m-%d-%Y\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -3505,7 +3523,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3513,7 +3531,7 @@
    "source": [
     "# Check import of cleaned data\n",
     "cleaned_raw_df = pd.read_csv(\n",
-    "    \"./2023_results_cleaned.csv\",\n",
+    "    CLEANED_FILE_PATH,\n",
     "    # Import was failing to parse date columns, so I\n",
     "    # had to pass in the column names\n",
     "    parse_dates=[\n",
@@ -3546,7 +3564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -3694,7 +3712,7 @@
        "4    False                 1  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3750,7 +3768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3760,7 +3778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -3914,7 +3932,7 @@
        "4    False                 1                  September  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3936,7 +3954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -4103,7 +4121,7 @@
        "4                 Saturday  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4120,17 +4138,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
+    "SPLIT_FILE_PATH = os.path.join(os.getcwd(), f\"{STRIPPED_CSV_FILE_NAME}_split.csv\")\n",
+    "\n",
     "# Export the split data to a csv file\n",
-    "df_split.to_csv(\"./2023_results_split.csv\", index=False, date_format=\"%m-%d-%Y\")"
+    "df_split.to_csv(SPLIT_FILE_PATH, index=False, date_format=\"%m-%d-%Y\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -4167,14 +4187,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
+    "SPLIT_SKIPPED_FILE_PATH = os.path.join(\n",
+    "    os.getcwd(), f\"{STRIPPED_CSV_FILE_NAME}_split_skipped.csv\"\n",
+    ")\n",
+    "\n",
     "# Export the split skipped data to a csv file\n",
-    "df_split_skipped.to_csv(\n",
-    "    \"./2023_results_split_skipped.csv\", index=False, date_format=\"%m-%d-%Y\"\n",
-    ")"
+    "df_split_skipped.to_csv(SPLIT_SKIPPED_FILE_PATH, index=False, date_format=\"%m-%d-%Y\")"
    ]
   }
  ],
