--- a/2023/hypergeometric_distribution.ipynb
+++ b/2023/hypergeometric_distribution.ipynb
@@ -169,14 +169,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Probability of 1 successes in the sample: 20.97%\n"
+     "ename": "NameError",
+     "evalue": "name 's' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 11\u001b[0m\n\u001b[1;32m      8\u001b[0m x \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marange(\u001b[38;5;241m0\u001b[39m, n\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# Iterate over x and calculate the probability mass function\u001b[39;00m\n\u001b[0;32m---> 11\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[43ms\u001b[49m:\n\u001b[1;32m     12\u001b[0m     p_x \u001b[38;5;241m=\u001b[39m rv\u001b[38;5;241m.\u001b[39mpmf(s)\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mProbability of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00ms\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m successes in the sample: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mp_x\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.2%\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 's' is not defined"
      ]
     }
    ],
@@ -188,15 +192,18 @@
     "[N, R, n] = [40031, 2558, 4]\n",
     "rv = hypergeom(N, R, n)\n",
     "\n",
-    "x = 1 # Number of successes in the sample\n",
-    "p_x = rv.pmf(x)\n",
+    "s = np.arange(0, n+1)\n",
     "\n",
-    "print(f\"Probability of {x} successes in the sample: {p_x:.2%}\")"
+    "# Iterate over x and calculate the probability mass function\n",
+    "for i in s:\n",
+    "    p_x = rv.pmf(s)\n",
+    "    \n",
+    "    print(f\"Probability of {s} successes in the sample: {p_x:.2%}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
