--- a/2023/hypergeometric_distribution.ipynb
+++ b/2023/hypergeometric_distribution.ipynb
@@ -169,18 +169,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 's' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 11\u001b[0m\n\u001b[1;32m      8\u001b[0m x \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marange(\u001b[38;5;241m0\u001b[39m, n\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# Iterate over x and calculate the probability mass function\u001b[39;00m\n\u001b[0;32m---> 11\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[43ms\u001b[49m:\n\u001b[1;32m     12\u001b[0m     p_x \u001b[38;5;241m=\u001b[39m rv\u001b[38;5;241m.\u001b[39mpmf(s)\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mProbability of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00ms\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m successes in the sample: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mp_x\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.2%\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 's' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability of 0 successes in the sample: 76.79%\n",
+      "Probability of 1 successes in the sample: 20.97%\n",
+      "Probability of 2 successes in the sample: 2.15%\n",
+      "Probability of 3 successes in the sample: 0.10%\n",
+      "Probability of 4 successes in the sample: 0.00%\n"
      ]
     }
    ],
@@ -197,13 +197,13 @@
     "# Iterate over x and calculate the probability mass function\n",
     "for i in s:\n",
     "    p_x = rv.pmf(s)\n",
-    "    \n",
-    "    print(f\"Probability of {s} successes in the sample: {p_x:.2%}\")"
+    "\n",
+    "    print(f\"Probability of {i} successes in the sample: {p_x[i]:.2%}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,10 @@
     "ax.set_yticklabels(['{:,.0%}'.format(x) for x in vals])\n",
     "ax.set_title('Hypergeometric PMF: N=%i, R=%i, n=%i' % (N, R, n))\n",
     "ax.xaxis.set(ticks=range(0, n+1))\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# Save image\n",
+    "fig.savefig(\"hypergeometric_pmf.png\")"
    ]
   }
  ],
