Fix heading for Labor Day section

--- a/2024/analysis.ipynb
+++ b/2024/analysis.ipynb
@@ -5071,7 +5071,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Best Weekend to Apply in Peak Season"
+    "### Labor Day"
    ]
   },
   {
